@@ -179,7 +179,8 @@ class _posixfile_:
         if sys.platform in ('netbsd1',
                             'openbsd2',
                             'freebsd2', 'freebsd3', 'freebsd4', 'freebsd5',
-                            'freebsd6', 'bsdos2', 'bsdos3', 'bsdos4'):
+                            'freebsd6', 'freebsd7',
+                            'bsdos2', 'bsdos3', 'bsdos4'):
             flock = struct.pack('lxxxxlxxxxlhh', \
                   l_start, l_len, os.getpid(), l_type, l_whence)
         elif sys.platform in ('aix3', 'aix4'):
